# 1brc

./: .gitignore  CLAUDE.md  README.md
.docs_for_ai/: README.md
.docs_for_ai/arrow/cpp/: array.html  array.md  datatype.html  datatype.md
.docs_for_ai/arrow/python/: datatypes.html  datatypes.md
.docs_for_ai/datafusion/: building-logical-plans.md  data_types.md  dataframe.md  profiling.md  using-the-dataframe-api.md
.docs_for_ai/datafusion/profiling/: flamegraph.md
.docs_for_ai/duckdb/: csv-export.md  csv-overview.md
.docs_for_ai/duckdb/clients/: cpp.md
.docs_for_ai/polars/: config.md  data-types-and-structures.md  expressions-and-contexts.md  functions.md  lazy-api.md  lazyframe.md  optimizations.md  polars_crate_root.md  streaming.md
1brc-datafusion-rs/: CLAUDE.md  Cargo.toml  README.md  benchmark.sh  build.sh  test.sh
1brc-datafusion-rs/src/: main.rs  main_decimal.rs
1brc-duckdb-cpp/: CLAUDE.md  CMakeLists.txt  README.md  benchmark.sh  build.sh  quick_test.sh  test.sh  test_suite.sh
1brc-duckdb-cpp/src/: main.cpp  main_decimal.cpp  main_double.cpp
1brc-duckdb-cpp/tests/: test_main.cpp
